--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>88</li>
-    </ul>
+    <div class="change__theme">
+        <button>Change Theme</button>
+    </div>
+    <div class="profile__info">
+        <div class="Logo"> 
+            <p>Logo</p>
+        </div>
+        <div class="Info">
+
+        </div>
+    </div>
+    <div class="profile__facts">
+
+    </div>
+    <div class="tabs__bottom">
+
+    </div>
+    <div class="tabs__content">
+
+    </div>
 </body>
+<footer>
+    
+</footer>
 </html>
