--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,10 @@
     </div>
     <div class="profile__info">
         <div class="Logo"> 
-            <p>Logo</p>
+            <h1>Viachslau Rybalko</h1>
+            <img class="logo_img" src="img/logo.jpg" alt="Logo">
+            <p>Software Engineer</p>
+        
         </div>
         <div class="Info">
 
@@ -30,6 +33,6 @@
     </div>
 </body>
 <footer>
-    
+    <p>© Viachslau Rybalko. 2022 All rigths reserved</p>
 </footer>
 </html>
